--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "quasar": "^1.0.0",
-    "serve-static": "^1.14.1"
-  },
-  "devDependencies": {
+    "serve-static": "^1.14.1",
     "@quasar/app": "^2.0.0"
   },
   "browserslist": [
